# sqlsy

./: .gitignore  README.md  pyproject.toml  requirements.txt  sql_setup.sh
src/sqlsy/: __init__.py  __main__.py  engine.py  schema.py
src/sqlsy/utils/: custom_callbacks.py  mapping.py  schema.py
